--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -1746,24 +1746,31 @@ int gnutls_url_is_supported (const char* url);
   /* PIN callback */
 /**
  * gnutls_pin_flag_t:
- * @GNUTLS_PKCS11_PIN_USER: The PIN for the user.
- * @GNUTLS_PKCS11_PIN_SO: The PIN for the security officer.
- * @GNUTLS_PKCS11_PIN_CONTEXT_SPECIFIC: The PIN is for a specific action and key like signing.
- * @GNUTLS_PKCS11_PIN_FINAL_TRY: This is the final try before blocking.
- * @GNUTLS_PKCS11_PIN_COUNT_LOW: Few tries remain before token blocks.
- * @GNUTLS_PKCS11_PIN_WRONG: Last given PIN was not correct.
+ * @GNUTLS_PIN_USER: The PIN for the user.
+ * @GNUTLS_PIN_SO: The PIN for the security officer (admin).
+ * @GNUTLS_PIN_CONTEXT_SPECIFIC: The PIN is for a specific action and key like signing.
+ * @GNUTLS_PIN_FINAL_TRY: This is the final try before blocking.
+ * @GNUTLS_PIN_COUNT_LOW: Few tries remain before token blocks.
+ * @GNUTLS_PIN_WRONG: Last given PIN was not correct.
  *
  * Enumeration of different PIN flags.
  */
 typedef enum
   {
-    GNUTLS_PKCS11_PIN_USER = (1 << 0),
-    GNUTLS_PKCS11_PIN_SO = (1 << 1),
-    GNUTLS_PKCS11_PIN_FINAL_TRY = (1 << 2),
-    GNUTLS_PKCS11_PIN_COUNT_LOW = (1 << 3),
-    GNUTLS_PKCS11_PIN_CONTEXT_SPECIFIC = (1 << 4),
-    GNUTLS_PKCS11_PIN_WRONG = (1 << 5),
+    GNUTLS_PIN_USER = (1 << 0),
+    GNUTLS_PIN_SO = (1 << 1),
+    GNUTLS_PIN_FINAL_TRY = (1 << 2),
+    GNUTLS_PIN_COUNT_LOW = (1 << 3),
+    GNUTLS_PIN_CONTEXT_SPECIFIC = (1 << 4),
+    GNUTLS_PIN_WRONG = (1 << 5),
   } gnutls_pin_flag_t;
+
+#define GNUTLS_PKCS11_PIN_USER GNUTLS_PIN_USER
+#define GNUTLS_PKCS11_PIN_SO GNUTLS_PIN_SO
+#define GNUTLS_PKCS11_PIN_FINAL_TRY GNUTLS_PIN_FINAL_TRY
+#define GNUTLS_PKCS11_PIN_COUNT_LOW  GNUTLS_PIN_COUNT_LOW
+#define GNUTLS_PKCS11_PIN_CONTEXT_SPECIFIC GNUTLS_PIN_CONTEXT_SPECIFIC
+#define GNUTLS_PKCS11_PIN_WRONG GNUTLS_PIN_WRONG
 
 /**
  * gnutls_pin_callback_t:
