--- a/doc/latex/Makefile.am
+++ b/doc/latex/Makefile.am
@@ -5,9 +5,9 @@ GEN_TEX_OBJECTS = cha-preface.tex cha-library.tex cha-intro-tls.tex cha-cert-aut
   cha-cert-auth.tex cha-gtls-app.tex sec-tls-app.tex cha-programs.tex cha-support.tex \
   cha-functions.tex error_codes.tex cha-ciphersuites.tex algorithms.tex cha-shared-key.tex \
   cha-errors.tex alerts.tex cha-internals.tex cha-gtls-examples.tex cha-upgrade.tex \
-  invoke-certtool.tex invoke-gnutls-cli.tex invoke-gnutls-serv.tex \
+  invoke-certtool.tex invoke-gnutls-cli.tex invoke-gnutls-serv.tex cha-tokens.tex \
   invoke-srptool.tex invoke-psktool.tex invoke-gnutls-cli-debug.tex \
-  invoke-p11tool.tex invoke-ocsptool.tex
+  invoke-p11tool.tex invoke-ocsptool.tex invoke-tpmtool.tex
 
 invoke-certtool.tex: ../invoke-certtool.texi
 	../scripts/mytexi2latex $< > $@
@@ -15,7 +15,13 @@ invoke-certtool.tex: ../invoke-certtool.texi
 cha-upgrade.tex: ../cha-upgrade.texi
 	../scripts/mytexi2latex $< > $@
 
+cha-tokens.tex: ../cha-tokens.texi
+	../scripts/mytexi2latex $< > $@
+
 invoke-gnutls-cli.tex: ../invoke-gnutls-cli.texi
+	../scripts/mytexi2latex $< > $@
+
+invoke-tpmtool.tex: ../invoke-tpmtool.texi
 	../scripts/mytexi2latex $< > $@
 
 invoke-gnutls-serv.tex: ../invoke-gnutls-serv.texi
