--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -697,6 +697,7 @@ typedef enum
     GNUTLS_CB_TLS_UNIQUE
   } gnutls_channel_binding_t;
 
+
 /* If you want to change this, then also change the define in
  * gnutls_int.h, and recompile.
  */
@@ -1744,6 +1745,7 @@ int gnutls_load_file(const char* filename, gnutls_datum_t * data);
 int gnutls_url_is_supported (const char* url);
 
   /* PIN callback */
+
 /**
  * gnutls_pin_flag_t:
  * @GNUTLS_PIN_USER: The PIN for the user.
@@ -1753,10 +1755,10 @@ int gnutls_url_is_supported (const char* url);
  * @GNUTLS_PIN_COUNT_LOW: Few tries remain before token blocks.
  * @GNUTLS_PIN_WRONG: Last given PIN was not correct.
  *
- * Enumeration of different PIN flags.
+ * Enumeration of different flags that are input to the PIN function.
  */
-typedef enum
-  {
+  typedef enum
+    {
     GNUTLS_PIN_USER = (1 << 0),
     GNUTLS_PIN_SO = (1 << 1),
     GNUTLS_PIN_FINAL_TRY = (1 << 2),
@@ -1776,14 +1778,14 @@ typedef enum
  * gnutls_pin_callback_t:
  * @userdata: user-controlled data from gnutls_pkcs11_set_pin_function().
  * @attempt: pin-attempt counter, initially 0.
- * @token_url: PKCS11 URL.
- * @token_label: label of PKCS11 token.
+ * @token_url: URL of token.
+ * @token_label: label of token.
  * @flags: a #gnutls_pin_flag_t flag.
  * @pin: buffer to hold PIN, of size @pin_max.
  * @pin_max: size of @pin buffer.
  *
- * Callback function type for PKCS#11 PIN entry.  It is set by
- * gnutls_pkcs11_set_pin_function().
+ * Callback function type for PKCS#11 or TPM PIN entry.  It is set by
+ * functions like gnutls_pkcs11_set_pin_function().
  *
  * The callback should provides the PIN code to unlock the token with
  * label @token_label, specified by the URL @token_url.
