no need for libgnutlsxx.map

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -167,7 +167,7 @@ AM_CXXFLAGS = \
 
 lib_LTLIBRARIES += libgnutlsxx.la
 
-libgnutlsxx_la_SOURCES = gnutlsxx.cpp libgnutlsxx.map
+libgnutlsxx_la_SOURCES = gnutlsxx.cpp
 
 libgnutlsxx_la_LDFLAGS = -no-undefined \
 	-version-info $(CXX_LT_CURRENT):$(CXX_LT_REVISION):$(CXX_LT_AGE)
