--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -751,6 +751,9 @@ typedef enum
   int gnutls_bye (gnutls_session_t session, gnutls_close_request_t how);
 
   int gnutls_handshake (gnutls_session_t session);
+
+#define GNUTLS_DEFAULT_HANDSHAKE_TIMEOUT 60
+  int gnutls_handshake_timeout (gnutls_session_t session, unsigned int sec);
   int gnutls_rehandshake (gnutls_session_t session);
 
   gnutls_alert_description_t gnutls_alert_get (gnutls_session_t session);
