--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -169,7 +169,7 @@ images_DATA = \
 AM_MAKEINFOFLAGS = -I $(top_srcdir)/doc
 TEXI2DVI = texi2dvi $(AM_MAKEINFOFLAGS)
 AM_MAKEINFOHTMLFLAGS = $(AM_MAKEINFOFLAGS) \
-	--set FLOAT_NAME_IN_XREF=1 --no-split --css-include=$(srcdir)/texinfo.css
+	--no-split --css-include=$(srcdir)/texinfo.css
 
 MAINTAINERCLEANFILES =
 
