Added missing functions

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -802,6 +802,8 @@ FUNCS += functions/gnutls_compression_get
 FUNCS += functions/gnutls_compression_get.short
 FUNCS += functions/gnutls_certificate_type_get
 FUNCS += functions/gnutls_certificate_type_get.short
+FUNCS += functions/gnutls_sign_algorithm_get
+FUNCS += functions/gnutls_sign_algorithm_get.short
 FUNCS += functions/gnutls_sign_algorithm_get_requested
 FUNCS += functions/gnutls_sign_algorithm_get_requested.short
 FUNCS += functions/gnutls_cipher_get_key_size
@@ -822,6 +824,10 @@ FUNCS += functions/gnutls_pk_get_name
 FUNCS += functions/gnutls_pk_get_name.short
 FUNCS += functions/gnutls_sign_get_name
 FUNCS += functions/gnutls_sign_get_name.short
+FUNCS += functions/gnutls_sign_get_hash_algorithm
+FUNCS += functions/gnutls_sign_get_hash_algorithm.short
+FUNCS += functions/gnutls_sign_get_pk_algorithm
+FUNCS += functions/gnutls_sign_get_pk_algorithm.short
 FUNCS += functions/gnutls_pk_to_sign
 FUNCS += functions/gnutls_pk_to_sign.short
 FUNCS += functions/gnutls_mac_get_id
