--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -80,11 +80,15 @@ psktool.1: ../../src/psk-args.def
 APIMANS =
 APIMANS += gnutls_pubkey_init.3
 APIMANS += gnutls_pubkey_deinit.3
+APIMANS += gnutls_pubkey_set_pin_function.3
 APIMANS += gnutls_pubkey_get_pk_algorithm.3
 APIMANS += gnutls_pubkey_import_x509.3
 APIMANS += gnutls_pubkey_import_pkcs11.3
 APIMANS += gnutls_pubkey_import_openpgp.3
 APIMANS += gnutls_pubkey_import_privkey.3
+APIMANS += gnutls_pubkey_import_tpm_url.3
+APIMANS += gnutls_pubkey_import_url.3
+APIMANS += gnutls_pubkey_import_tpm_raw.3
 APIMANS += gnutls_pubkey_get_preferred_hash_algorithm.3
 APIMANS += gnutls_pubkey_get_pk_rsa_raw.3
 APIMANS += gnutls_pubkey_get_pk_dsa_raw.3
@@ -109,12 +113,20 @@ APIMANS += gnutls_pubkey_get_verify_algorithm.3
 APIMANS += gnutls_pubkey_verify_data2.3
 APIMANS += gnutls_privkey_init.3
 APIMANS += gnutls_privkey_deinit.3
+APIMANS += gnutls_privkey_set_pin_function.3
 APIMANS += gnutls_privkey_get_pk_algorithm.3
 APIMANS += gnutls_privkey_get_type.3
 APIMANS += gnutls_privkey_import_pkcs11.3
 APIMANS += gnutls_privkey_import_x509.3
 APIMANS += gnutls_privkey_import_openpgp.3
+APIMANS += gnutls_privkey_import_openpgp_raw.3
+APIMANS += gnutls_privkey_import_x509_raw.3
+APIMANS += gnutls_privkey_import_tpm_raw.3
+APIMANS += gnutls_privkey_import_tpm_url.3
+APIMANS += gnutls_privkey_import_url.3
+APIMANS += gnutls_privkey_import_pkcs11_url.3
 APIMANS += gnutls_privkey_import_ext.3
+APIMANS += gnutls_privkey_import_ext2.3
 APIMANS += gnutls_privkey_sign_data.3
 APIMANS += gnutls_privkey_sign_hash.3
 APIMANS += gnutls_privkey_decrypt_data.3
@@ -187,6 +199,7 @@ APIMANS += gnutls_dtls_set_timeouts.3
 APIMANS += gnutls_dtls_get_mtu.3
 APIMANS += gnutls_dtls_get_data_mtu.3
 APIMANS += gnutls_dtls_set_mtu.3
+APIMANS += gnutls_dtls_set_data_mtu.3
 APIMANS += gnutls_dtls_get_timeout.3
 APIMANS += gnutls_dtls_cookie_send.3
 APIMANS += gnutls_dtls_cookie_verify.3
@@ -197,6 +210,7 @@ APIMANS += gnutls_init.3
 APIMANS += gnutls_deinit.3
 APIMANS += gnutls_bye.3
 APIMANS += gnutls_handshake.3
+APIMANS += gnutls_handshake_set_timeout.3
 APIMANS += gnutls_rehandshake.3
 APIMANS += gnutls_alert_get.3
 APIMANS += gnutls_alert_send.3
@@ -214,6 +228,7 @@ APIMANS += gnutls_kx_get.3
 APIMANS += gnutls_mac_get.3
 APIMANS += gnutls_compression_get.3
 APIMANS += gnutls_certificate_type_get.3
+APIMANS += gnutls_sign_algorithm_get.3
 APIMANS += gnutls_sign_algorithm_get_requested.3
 APIMANS += gnutls_cipher_get_key_size.3
 APIMANS += gnutls_mac_get_key_size.3
@@ -224,6 +239,8 @@ APIMANS += gnutls_kx_get_name.3
 APIMANS += gnutls_certificate_type_get_name.3
 APIMANS += gnutls_pk_get_name.3
 APIMANS += gnutls_sign_get_name.3
+APIMANS += gnutls_sign_get_hash_algorithm.3
+APIMANS += gnutls_sign_get_pk_algorithm.3
 APIMANS += gnutls_pk_to_sign.3
 APIMANS += gnutls_mac_get_id.3
 APIMANS += gnutls_compression_get_id.3
@@ -288,6 +305,7 @@ APIMANS += gnutls_session_set_data.3
 APIMANS += gnutls_session_get_data.3
 APIMANS += gnutls_session_get_data2.3
 APIMANS += gnutls_session_get_random.3
+APIMANS += gnutls_session_set_premaster.3
 APIMANS += gnutls_session_get_id.3
 APIMANS += gnutls_session_channel_binding.3
 APIMANS += gnutls_session_is_resumed.3
@@ -429,6 +447,9 @@ APIMANS += gnutls_tdb_deinit.3
 APIMANS += gnutls_verify_stored_pubkey.3
 APIMANS += gnutls_store_commitment.3
 APIMANS += gnutls_store_pubkey.3
+APIMANS += gnutls_load_file.3
+APIMANS += gnutls_url_is_supported.3
+APIMANS += gnutls_certificate_set_pin_function.3
 APIMANS += gnutls_ocsp_req_init.3
 APIMANS += gnutls_ocsp_req_deinit.3
 APIMANS += gnutls_ocsp_req_import.3
@@ -535,8 +556,10 @@ APIMANS += gnutls_pkcs11_reinit.3
 APIMANS += gnutls_pkcs11_deinit.3
 APIMANS += gnutls_pkcs11_set_token_function.3
 APIMANS += gnutls_pkcs11_set_pin_function.3
+APIMANS += gnutls_pkcs11_get_pin_function.3
 APIMANS += gnutls_pkcs11_add_provider.3
 APIMANS += gnutls_pkcs11_obj_init.3
+APIMANS += gnutls_pkcs11_obj_set_pin_function.3
 APIMANS += gnutls_pkcs11_obj_import_url.3
 APIMANS += gnutls_pkcs11_obj_export_url.3
 APIMANS += gnutls_pkcs11_obj_deinit.3
@@ -560,6 +583,7 @@ APIMANS += gnutls_pkcs11_obj_get_type.3
 APIMANS += gnutls_pkcs11_type_get_name.3
 APIMANS += gnutls_x509_crt_list_import_pkcs11.3
 APIMANS += gnutls_pkcs11_privkey_init.3
+APIMANS += gnutls_pkcs11_privkey_set_pin_function.3
 APIMANS += gnutls_pkcs11_privkey_deinit.3
 APIMANS += gnutls_pkcs11_privkey_get_pk_algorithm.3
 APIMANS += gnutls_pkcs11_privkey_get_info.3
@@ -589,6 +613,11 @@ APIMANS += gnutls_pkcs12_bag_get_key_id.3
 APIMANS += gnutls_pkcs12_bag_set_key_id.3
 APIMANS += gnutls_pkcs12_bag_get_friendly_name.3
 APIMANS += gnutls_pkcs12_bag_set_friendly_name.3
+APIMANS += gnutls_tpm_privkey_generate.3
+APIMANS += gnutls_tpm_key_list_deinit.3
+APIMANS += gnutls_tpm_key_list_get_url.3
+APIMANS += gnutls_tpm_get_registered.3
+APIMANS += gnutls_tpm_privkey_delete.3
 APIMANS += gnutls_x509_crt_init.3
 APIMANS += gnutls_x509_crt_deinit.3
 APIMANS += gnutls_x509_crt_import.3
@@ -614,6 +643,7 @@ APIMANS += gnutls_x509_crt_get_authority_key_gn_serial.3
 APIMANS += gnutls_x509_crt_get_subject_key_id.3
 APIMANS += gnutls_x509_crt_get_subject_unique_id.3
 APIMANS += gnutls_x509_crt_get_issuer_unique_id.3
+APIMANS += gnutls_x509_crt_set_pin_function.3
 APIMANS += gnutls_x509_crt_get_authority_info_access.3
 APIMANS += gnutls_x509_crt_get_crl_dist_points.3
 APIMANS += gnutls_x509_crt_set_crl_dist_points2.3
@@ -734,6 +764,8 @@ APIMANS += gnutls_x509_privkey_sec_param.3
 APIMANS += gnutls_x509_privkey_cpy.3
 APIMANS += gnutls_x509_privkey_import.3
 APIMANS += gnutls_x509_privkey_import_pkcs8.3
+APIMANS += gnutls_x509_privkey_import_openssl.3
+APIMANS += gnutls_x509_privkey_import2.3
 APIMANS += gnutls_x509_privkey_import_rsa_raw.3
 APIMANS += gnutls_x509_privkey_import_rsa_raw2.3
 APIMANS += gnutls_x509_privkey_import_ecc_raw.3
