Sort and add doc/tpm-api.texi.

--- a/.gitignore
+++ b/.gitignore
@@ -85,6 +85,7 @@ doc/examples/ex-serv1
 doc/examples/libexamples.la
 doc/examples/print-ciphersuites
 doc/extra.c.texi
+doc/functions/
 doc/gnutls-api.texi
 doc/gnutls-extra-api.texi
 doc/gnutls-guile.html
@@ -92,6 +93,7 @@ doc/gnutls.aux
 doc/gnutls.cp
 doc/gnutls.cps
 doc/gnutls.dvi
+doc/gnutls.epub
 doc/gnutls.fn
 doc/gnutls.fns
 doc/gnutls.html
@@ -105,7 +107,9 @@ doc/gnutls.toc
 doc/gnutls.tp
 doc/gnutls.vr
 doc/gnutls.vrs
+doc/gnutls.xml
 doc/ia-api.texi
+doc/latex/cha-upgrade.tex
 doc/latex/enums
 doc/latex/gnutls-enums.tex
 doc/latex/gnutls.lof
@@ -161,6 +165,8 @@ doc/scripts/Makefile.in
 doc/stamp-1
 doc/stamp-vti
 doc/stamp_enums
+doc/stamp_functions
+doc/tpm-api.texi
 doc/version-guile.texi
 doc/version.texi
 doc/x509-api.texi
@@ -177,6 +183,7 @@ gl/arpa/
 gl/c++defs.h
 gl/dirent.h
 gl/getopt.h
+gl/glthread/.dirstamp
 gl/libgnu.la
 gl/math.h
 gl/netdb.h
@@ -204,6 +211,7 @@ gl/tests/test-alignof
 gl/tests/test-alloca-opt
 gl/tests/test-argp
 gl/tests/test-arpa_inet
+gl/tests/test-base64
 gl/tests/test-binary-io
 gl/tests/test-bind
 gl/tests/test-byteswap
@@ -437,7 +445,6 @@ po/quot.sed
 po/remove-potcdate.sed
 po/remove-potcdate.sin
 po/stamp-po
-src/invoke-*.menu
 src/Makefile
 src/Makefile.in
 src/benchmark
@@ -455,6 +462,7 @@ src/gaa.skel
 src/gnutls-cli
 src/gnutls-cli-debug
 src/gnutls-serv
+src/invoke-*.menu
 src/libcfg.la
 src/libcmd-certtool.la
 src/libcmd-cli-debug.la
@@ -464,10 +472,13 @@ src/libcmd-p11tool.la
 src/libcmd-psk.la
 src/libcmd-serv.la
 src/libcmd-srp.la
+src/libcmd-tpmtool.la
+src/libopts/libopts.la
 src/ocsptool
 src/p11tool
 src/psktool
 src/srptool
+src/tpmtool
 stamp-h1
 tags
 tests/*/out
@@ -488,6 +499,7 @@ tests/cve-2009-1416
 tests/dhepskself
 tests/dn
 tests/dn2
+tests/dtls/dtls-stress
 tests/finished
 tests/gc
 tests/hostname-check
@@ -497,15 +509,21 @@ tests/key-id/Makefile
 tests/key-id/Makefile.in
 tests/libutils.la
 tests/mini
-tests/mini-loss
-tests/mini-emsgsize-dtls
 tests/mini-deflate
+tests/mini-dtls-rehandshake
 tests/mini-eagain
 tests/mini-eagain-dtls
-tests/mini-x509
-tests/mini-x509-cas
-tests/mini-dtls-rehandshake
+tests/mini-emsgsize-dtls
+tests/mini-loss
+tests/mini-loss-time
+tests/mini-loss2
+tests/mini-record
 tests/mini-rehandshake
+tests/mini-tdb
+tests/mini-termination
+tests/mini-x509
+tests/mini-x509-2
+tests/mini-x509-cas
 tests/moredn
 tests/mpi
 tests/netconf-psk
@@ -529,10 +547,12 @@ tests/pkcs12-decode/Makefile.in
 tests/pkcs12_encode
 tests/pkcs12_s2k
 tests/pkcs12_s2k_pem
+tests/pkcs12_simple
 tests/pkcs8-decode/Makefile
 tests/pkcs8-decode/Makefile.in
 tests/pskself
 tests/resume
+tests/resume-dtls
 tests/rng-fork
 tests/rsa-encrypt-decrypt
 tests/rsa-md5-collision/Makefile
@@ -551,6 +571,7 @@ tests/simple
 tests/slow/cipher-test
 tests/slow/gendh
 tests/slow/keygen
+tests/srp/mini-srp
 tests/suite/eagain-cli
 tests/suite/libecore.la
 tests/suite/x509paths/X509tests
@@ -565,25 +586,5 @@ tests/x509paths/
 tests/x509self
 tests/x509sign-verify
 tests/x509signself
-gl/tests/test-base64
-tests/mini-loss2
-src/libopts/libopts.la
-tests/mini-loss-time
-tests/dtls/dtls-stress
-doc/gnutls.epub
-doc/gnutls.xml
-tests/mini-tdb
-tests/resume-dtls
-tests/mini-record
-tests/srp/mini-srp
-doc/stamp_functions
-doc/latex/cha-upgrade.tex
-doc/functions/
-gl/glthread/.dirstamp
-tests/mini-termination
-tests/mini-x509-2
-tests/pkcs12_simple
 win32
 win64
-src/tpmtool
-src/libcmd-tpmtool.la
