--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -908,11 +908,12 @@ gnutls_ecc_curve_t gnutls_ecc_curve_get(gnutls_session_t session);
                               void *data, size_t * data_length,
                               unsigned int *type, unsigned int indx);
 
+#define GNUTLS_HB_PEER_ALLOWED_TO_SEND (1)
+#define GNUTLS_HB_PEER_NOT_ALLOWED_TO_SEND (1<<1)
+
     /* Heartbeat */
-    int gnutls_heartbeat_allow (gnutls_session_t session);
-    int gnutls_heartbeat_deny (gnutls_session_t session);
-    int gnutls_heartbeat_enabled_local (gnutls_session_t session);
-    int gnutls_heartbeat_enabled_remote (gnutls_session_t session);
+    void gnutls_heartbeat_enable (gnutls_session_t session, unsigned int type);
+    int gnutls_heartbeat_allowed (gnutls_session_t session, unsigned int type);
     int gnutls_heartbeat_timeout (gnutls_session_t session, int check_only);
 
   /* Safe renegotiation */
