Added heartbeat functions

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -882,6 +882,10 @@ FUNCS += functions/gnutls_handshake_get_last_out
 FUNCS += functions/gnutls_handshake_get_last_out.short
 FUNCS += functions/gnutls_handshake_get_last_in
 FUNCS += functions/gnutls_handshake_get_last_in.short
+FUNCS += functions/gnutls_heartbeat_ping
+FUNCS += functions/gnutls_heartbeat_ping.short
+FUNCS += functions/gnutls_heartbeat_ping_rnd
+FUNCS += functions/gnutls_heartbeat_ping_rnd.short
 FUNCS += functions/gnutls_record_send
 FUNCS += functions/gnutls_record_send.short
 FUNCS += functions/gnutls_record_recv
@@ -908,6 +912,12 @@ FUNCS += functions/gnutls_server_name_set
 FUNCS += functions/gnutls_server_name_set.short
 FUNCS += functions/gnutls_server_name_get
 FUNCS += functions/gnutls_server_name_get.short
+FUNCS += functions/gnutls_heartbeat_enable
+FUNCS += functions/gnutls_heartbeat_enable.short
+FUNCS += functions/gnutls_heartbeat_allowed
+FUNCS += functions/gnutls_heartbeat_allowed.short
+FUNCS += functions/gnutls_heartbeat_timeout
+FUNCS += functions/gnutls_heartbeat_timeout.short
 FUNCS += functions/gnutls_safe_renegotiation_status
 FUNCS += functions/gnutls_safe_renegotiation_status.short
 FUNCS += functions/gnutls_supplemental_get_name
