--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -268,6 +268,8 @@ APIMANS += gnutls_strerror_name.3
 APIMANS += gnutls_handshake_set_private_extensions.3
 APIMANS += gnutls_handshake_get_last_out.3
 APIMANS += gnutls_handshake_get_last_in.3
+APIMANS += gnutls_heartbeat_ping.3
+APIMANS += gnutls_heartbeat_ping_rnd.3
 APIMANS += gnutls_record_send.3
 APIMANS += gnutls_record_recv.3
 APIMANS += gnutls_record_recv_seq.3
@@ -281,7 +283,9 @@ APIMANS += gnutls_prf.3
 APIMANS += gnutls_prf_raw.3
 APIMANS += gnutls_server_name_set.3
 APIMANS += gnutls_server_name_get.3
-APIMANS += gnutls_heartbeat_policy_set.3
+APIMANS += gnutls_heartbeat_enable.3
+APIMANS += gnutls_heartbeat_allowed.3
+APIMANS += gnutls_heartbeat_timeout.3
 APIMANS += gnutls_safe_renegotiation_status.3
 APIMANS += gnutls_supplemental_get_name.3
 APIMANS += gnutls_session_ticket_key_generate.3
