libopts depends on libintl. Patch by LRN.

--- a/src/libopts/Makefile.am
+++ b/src/libopts/Makefile.am
@@ -7,6 +7,7 @@ noinst_LTLIBRARIES      = libopts.la
 endif
 libopts_la_SOURCES      = libopts.c
 libopts_la_CPPFLAGS     = -I$(top_srcdir)
+libopts_la_LIBADD       = $(LTLIBINTL)
 libopts_la_LDFLAGS      = -version-info  36:4:11
 EXTRA_DIST              = \
     ag-char-map.h           alias.c                 ao-strs.c  \
