doc/manpages is handled the same as doc/

--- a/Makefile.am
+++ b/Makefile.am
@@ -37,6 +37,7 @@ dist-hook:
 	rm -f ChangeLog
 	make ChangeLog
 	make -C doc/ compare-makefile
+	make -C doc/manpages compare-makefile
 	cp -f ChangeLog $(distdir)/
 	sed 's/\@VERSION\@/$(VERSION)/g' -i $(distdir)/src/args-std.def
 	cd $(distdir)/src/ && for i in *.def;do \
