--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -754,7 +754,8 @@ typedef enum
   int gnutls_handshake (gnutls_session_t session);
 
 #define GNUTLS_DEFAULT_HANDSHAKE_TIMEOUT ((unsigned int)-1)
-  void gnutls_handshake_set_timeout (gnutls_session_t session, unsigned int sec);
+  void gnutls_handshake_set_timeout (gnutls_session_t session,
+				     unsigned int ms);
   int gnutls_rehandshake (gnutls_session_t session);
 
   gnutls_alert_description_t gnutls_alert_get (gnutls_session_t session);
@@ -804,11 +805,13 @@ gnutls_ecc_curve_t gnutls_ecc_curve_get(gnutls_session_t session);
                                                 type);
   const char *gnutls_pk_get_name (gnutls_pk_algorithm_t algorithm);
   const char *gnutls_sign_get_name (gnutls_sign_algorithm_t algorithm);
-  gnutls_digest_algorithm_t gnutls_sign_get_hash_algorithm (gnutls_sign_algorithm_t);
-  gnutls_pk_algorithm_t gnutls_sign_get_pk_algorithm (gnutls_sign_algorithm_t);
-  
-  gnutls_sign_algorithm_t gnutls_pk_to_sign (gnutls_pk_algorithm_t pk,
-                                             gnutls_digest_algorithm_t d);
+  gnutls_digest_algorithm_t
+  gnutls_sign_get_hash_algorithm (gnutls_sign_algorithm_t sign);
+  gnutls_pk_algorithm_t
+  gnutls_sign_get_pk_algorithm (gnutls_sign_algorithm_t sign);
+  gnutls_sign_algorithm_t
+  gnutls_pk_to_sign (gnutls_pk_algorithm_t pk,
+		     gnutls_digest_algorithm_t hash);
 
 #define gnutls_sign_algorithm_get_name gnutls_sign_get_name
 
