--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -231,9 +231,10 @@ APIMANS += gnutls_hash_init.3
 APIMANS += gnutls_hash_output.3
 APIMANS += gnutls_heartbeat_allowed.3
 APIMANS += gnutls_heartbeat_enable.3
+APIMANS += gnutls_heartbeat_get_timeout.3
 APIMANS += gnutls_heartbeat_ping.3
-APIMANS += gnutls_heartbeat_ping_rnd.3
-APIMANS += gnutls_heartbeat_timeout.3
+APIMANS += gnutls_heartbeat_pong.3
+APIMANS += gnutls_heartbeat_set_timeouts.3
 APIMANS += gnutls_hex2bin.3
 APIMANS += gnutls_hex_decode.3
 APIMANS += gnutls_hex_encode.3
@@ -366,6 +367,10 @@ APIMANS += gnutls_pem_base64_encode_alloc.3
 APIMANS += gnutls_perror.3
 APIMANS += gnutls_pk_algorithm_get_name.3
 APIMANS += gnutls_pk_bits_to_sec_param.3
+APIMANS += gnutls_pk_get_id.3
+APIMANS += gnutls_pk_get_name.3
+APIMANS += gnutls_pk_list.3
+APIMANS += gnutls_pk_to_sign.3
 APIMANS += gnutls_pkcs11_add_provider.3
 APIMANS += gnutls_pkcs11_copy_secret_key.3
 APIMANS += gnutls_pkcs11_copy_x509_crt.3
@@ -439,10 +444,6 @@ APIMANS += gnutls_pkcs7_set_crl.3
 APIMANS += gnutls_pkcs7_set_crl_raw.3
 APIMANS += gnutls_pkcs7_set_crt.3
 APIMANS += gnutls_pkcs7_set_crt_raw.3
-APIMANS += gnutls_pk_get_id.3
-APIMANS += gnutls_pk_get_name.3
-APIMANS += gnutls_pk_list.3
-APIMANS += gnutls_pk_to_sign.3
 APIMANS += gnutls_prf.3
 APIMANS += gnutls_prf_raw.3
 APIMANS += gnutls_priority_certificate_type_list.3
@@ -782,8 +783,8 @@ APIMANS += gnutls_x509_crt_set_proxy.3
 APIMANS += gnutls_x509_crt_set_proxy_dn.3
 APIMANS += gnutls_x509_crt_set_pubkey.3
 APIMANS += gnutls_x509_crt_set_serial.3
-APIMANS += gnutls_x509_crt_set_subject_alternative_name.3
 APIMANS += gnutls_x509_crt_set_subject_alt_name.3
+APIMANS += gnutls_x509_crt_set_subject_alternative_name.3
 APIMANS += gnutls_x509_crt_set_subject_key_id.3
 APIMANS += gnutls_x509_crt_set_version.3
 APIMANS += gnutls_x509_crt_sign.3
